--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
-    "validator": "^13.1.17"
+    "morgan": "^1.10.0",
+    "validator": "^13.1.17",
+    "winston": "^3.3.3"
   }
 }
