--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
+    "mongoose-delete": "^0.5.3",
     "morgan": "^1.10.0",
     "twilio": "^3.52.0",
     "validator": "^13.1.17",
