--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 TWILIO_ACCOUNT_SID=AC58c31ebc70cf5428cc760c53e6c23026
 TWILIO_AUTH_TOKEN=431c401c0ae5ffc5a512066e95f3085e
+BASIC_AUTH_USERNAME=yopaanApp
+BASIC_AUTH_PASSWORD=aS3jF6xI5yT4oL2q
