--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.10.9",
     "mongoose-delete": "^0.5.3",
     "morgan": "^1.10.0",
+    "socket.io": "^3.0.4",
     "twilio": "^3.52.0",
     "validator": "^13.1.17",
     "winston": "^3.3.3"
