--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ TWILIO_ACCOUNT_SID=AC58c31ebc70cf5428cc760c53e6c23026
 TWILIO_AUTH_TOKEN=431c401c0ae5ffc5a512066e95f3085e
 BASIC_AUTH_USERNAME=powerGotha
 BASIC_AUTH_PASSWORD=aS3jF6xI5yT4oL2q
+
+SERVICE_ID=service_h4ceyal
+TEMPLATE_ID_CSE=template_8r6ohis
+TEMPLATE_ID_DOCTOR=template_mtovlj7
+USER_ID=user_3ixN0tauOlTsAFjWQx2gj
