social login api's working

--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ SERVICE_ID=service_h4ceyal
 TEMPLATE_ID_CSE=template_8r6ohis
 TEMPLATE_ID_DOCTOR=template_mtovlj7
 USER_ID=user_3ixN0tauOlTsAFjWQx2gj
-GOOGLE_O_AUTH_CLIENT_ID = 667222124738-rfs4nk7v0nut3elsm6kfhfdg5sljj1fs.apps.googleusercontent.com
+GOOGLE_O_AUTH_CLIENT_ID_ANDROID = 667222124738-t60oo7dq3ihacar6bqmmsa9518t2g1ml.apps.googleusercontent.com
+GOOGLE_O_AUTH_CLIENT_ID_IOS = 667222124738-rfs4nk7v0nut3elsm6kfhfdg5sljj1fs.apps.googleusercontent.com
